2005-07-05  Charles Levert  <charles_levert@gna.org>

	* doc/grep.texi: Add missing green color in GREP_COLORS description.
	* doc/grep.1: Fix typo and reorganize GREP_COLORS documentation.

	* src/kwset.c (DEPTH_SIZE): New macro to anticipate
	  architectures/compilers where CHAR_BIT is not 8 (we assume it
	  won't be less than 4, which would be non-standard and unlikely).
	  Checked to hold for CHAR_BIT up to 1023 (and maybe more)!
	* src/kwset.c (kwsincr): Use DEPTH_SIZE in two array declarations.

	* src/kwset.c (kwsincr): When a second obstack_alloc() call fails,
	  free what the first one successfully allocated by popping it
	  off the top of the obstack, before returning in error, just
	  to keep things clean.
	* src/kwset.c (kwsprep): Verify return value of obstack_alloc()
	  and return a memory exhausted error if so.  This function had
	  a prototype to return such errors, but never did.

2005-07-04  Charles Levert  <charles_levert@gna.org>

	* src/kwset.c: Readability changes.
	  Replace uses of 0 for pointer values by NULL.
	  Generalize use of existing U() macro to whole file.

	* src/kwset.c (kwsprep): Use memset() and memcpy() when appropriate.

	* src/kwset.c (kwsprep): Move three variable declarations to
	  the single {}-block where they are used.

	* src/kwset.c (kwsprep): Optimize search for mind2 value by
	  starting from the end of the target[] array.

2005-06-22  Charles Levert  <charles_levert@gna.org>

	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
	  grep/tests/bre.sh, grep/tests/empty.sh, grep/tests/ere.sh,
	  grep/tests/file.sh, grep/tests/fmbtest.sh, grep/tests/foad1.sh,
	  grep/tests/khadafy.sh, grep/tests/options.sh,
	  grep/tests/spencer1.sh, grep/tests/spencer2.sh,
	  grep/tests/status.sh, grep/tests/warning.sh: As per autoconf's
	  "Portable Shell Programming" guidelines, replace all instances
	  of "#!/bin/sh" by "#! /bin/sh" (notice the space).

2005-06-21  Charles Levert  <charles_levert@gna.org>
