@@ -1,3 +1,7 @@
+2005-07-07  Charles Levert  <charles_levert@gna.org>
+
+	* src/grep.c: Remove all xm capability code.
+
 2005-07-05  Charles Levert  <charles_levert@gna.org>
 
 	* doc/grep.texi: Add missing green color in GREP_COLORS description.
